pricng table styled

--- a/index.html
+++ b/index.html
@@ -87,21 +87,17 @@
           </div>
         </section>
         <section class="newsletter section">
-          <div class="container-sm">
+          <div class="container">
             <div class="newsletter-inner section-inner">
               <div class="newsletter-header text-center is-revealing">
                 <h2 class="section-title mt-0">Our Packages</h2>
                 <p class="section-paragraph">Safi is your cleanliness partner.<br>Safi brings you three subscription packages.</p>
               </div>
+              <br>
+              <br>
               <div class="main-row">
-                <!-- pricing-table-one -->
-                <div class="pricing-grid agileits-shadow">
-                  <div class="w3ls-main">
-                    <div id="cube" class="show-front">
-                      <figure class="top"> </figure>
-                    </div>
-                  </div>
-                  <div class="agileinfo-price ">
+                <div class="pricing-grid agileits-shadow is-revealing">
+                  <div class="agileinfo-price">
                     <h3>Hygiene</h3>
                     <h5>Safi’s Hygiene Subscription Pack focuses on ensuring personal hygiene, an area which every individual has to closely look into.</h5>
                   </div>
@@ -113,18 +109,12 @@
                       <li> Hand Sanitizer</li>
                     </ul>
                     <div class="buy">
-                      <a class="button button-primary button-block button-shadow popup-with-zoom-anim" href="#small-dialog">Subscribe Now</a>
+                      <a class="button button-primary button-block button-shadow popup-with-zoom-anim" href="mailto:info@buysafi.com">Subscribe Now</a>
                     </div>
                   </div>
                 </div>
-                <!-- pricing-table-two -->
-                <div class="pricing-grid agileits-shadow">
-                  <div class="w3ls-main">
-                    <div id="cube2" class="show-front">
-                      <figure class="top top-two"> </figure>
-                    </div>
-                  </div>
-                  <div class="agileinfo-price two">
+                <div class="pricing-grid agileits-shadow is-revealing">
+                  <div class="agileinfo-price tw">
                     <h3>Cleanliness</h3>
                     <h5>When your business environment is clean, it is a special feeling to be there and pursue your goals.</h5>
                   </div>
@@ -137,18 +127,12 @@
                       <li> Black Plastic Bags</li>
                     </ul>
                     <div class="buy buy-two">
-                      <a class="button button-primary button-block button-shadow popup-with-zoom-anim" href="#small-dialog">Subscribe Now</a>
+                      <a class="button button-primary button-block button-shadow popup-with-zoom-anim" href="mailto:info@buysafi.com">Subscribe Now</a>
                     </div>
                   </div>
                 </div>
-                <!-- pricing-table-three -->
-                <div class="pricing-grid agileits-shadow">
-                  <div class="w3ls-main">
-                    <div id="cube3" class="show-front">
-                      <figure class="top top-three"> </figure>
-                    </div>
-                  </div>
-                  <div class="agileinfo-price three">
+                <div class="pricing-grid agileits-shadow is-revealing">
+                  <div class="agileinfo-price thre">
                     <h3>Freshness</h3>
                     <h5>Your customers will not want to visit you if your business place smells foul. Subscribe to our Freshness Pack which is the go-to product for that fresh smell</h5>
                   </div>
@@ -161,11 +145,11 @@
                       <li> Premium Scented Tissues</li>
                     </ul>
                     <div class="buy  buy-three">
-                      <a class="button button-primary button-block button-shadow popup-with-zoom-anim" href="#small-dialog">Subscribe Now</a>
+                      <a class="button button-primary button-block button-shadow popup-with-zoom-anim" href="mailto:info@buysafi.com">Subscribe Now</a>
                     </div>
                   </div>
                 </div>
-                <div class="clear"> </div>
+                <br>
               </div>
             </div>
           </div>
@@ -174,6 +158,8 @@
           <div class="container-sm">
             <div class="newsletter-inner section-inner">
               <div class="newsletter-header text-center is-revealing">
+                <br>
+                <br>
                 <h2 class="section-title mt-0">That being said,</h2>
                 <p class="section-paragraph">Safi’s research has found that there is a lax approach in enforcing hand hygiene. Various reports from WHO (World Health Organization) solidifies this fact. Hand Hygiene along with general hygiene is something which needs to be seriously considered ifthe world has to achieve a healthier generation for Sustainable Development Goals as laid down by the UN.</p>
                 <p class="section-paragraph">For more info, drop your email id. (we won't spam you. 🙂)</p>
