--- a/index.html
+++ b/index.html
@@ -164,14 +164,19 @@
                 <p class="section-paragraph">Safi’s research has found that there is a lax approach in enforcing hand hygiene. Various reports from WHO (World Health Organization) solidifies this fact. Hand Hygiene along with general hygiene is something which needs to be seriously considered ifthe world has to achieve a healthier generation for Sustainable Development Goals as laid down by the UN.</p>
                 <p class="section-paragraph">For more info, drop your email id. (we won't spam you. 🙂)</p>
               </div>
-              <div class="footer-form newsletter-form field field-grouped is-revealing">
-                <div class="control control-expanded">
-                  <input class="input" type="email" name="email" placeholder="Your email id..">
+              <form name="moreInfo" method="POST" data-netlify="true" netlify-honeypot="nobot">
+                <div class="footer-form newsletter-form field field-grouped is-revealing">
+                  <p class="hidden">
+                    <label>Don’t fill this out if you're human: <input name="nobot"></label>
+                  </p>
+                  <div class="control control-expanded">
+                    <input class="input" type="email" name="email" required placeholder="Your email id..">
+                  </div>
+                  <div class="control">
+                    <button class="button button-primary button-block button-shadow" type="submit">Know More</button>
+                  </div>
                 </div>
-                <div class="control">
-                  <a class="button button-primary button-block button-shadow" href="#">Know More</a>
-                </div>
-              </div>
+              </form>
             </div>
           </div>
         </section>
@@ -186,35 +191,35 @@
             </div>
             <ul class="footer-links list-reset">
               <li>
-                <a href="#">Contact</a>
+                <a href="#">info@buysafi.com</a>
               </li>
               <li>
-                <a href="#">About us</a>
-              </li>
-              <li>
-                <a href="#">FAQ's</a>
-              </li>
-              <li>
-                <a href="#">Support</a>
+                <a href="#">+91 9846454246</a>
               </li>
             </ul>
             <ul class="footer-social-links list-reset">
               <li>
-                <a href="#">
+                <a target="_blank" href="https://facebook.com/saficonsumertech">
                   <span class="screen-reader-text">Facebook</span>
-                  <img src="assets/images/facebook.svg" class="svg" width="16" height="16" alt="">
+                  <img src="assets/images/facebook.png" width="16" height="16" alt="facebook">
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a target="_blank" href="https://twitter.com/buysafi">
                   <span class="screen-reader-text">Twitter</span>
-                  <img src="assets/images/twitter.svg" class="svg" width="16" height="16" alt="">
+                  <img src="assets/images/twitter.png" width="16" height="16" alt="twitter">
                 </a>
               </li>
               <li>
-                <a href="#">
-                  <span class="screen-reader-text">Google</span>
-                  <img src="assets/images/google.svg" class="svg" width="16" height="16" alt="">
+                <a target="_blank" href="https://instagram.com/buy.safi">
+                  <span class="screen-reader-text">Instagram</span>
+                  <img src="assets/images/instagram.png" width="16" height="16" alt="instagram">
+                </a>
+              </li>
+              <li>
+                <a target="_blank" href="https://api.whatsapp.com/send?phone=919846454246&text=Hello%2c%20I%20am%20interested%20in%20your%20subscription%20packages.%20More%20info%20pls%3f&source=&data=">
+                  <span class="screen-reader-text">WhatsApp</span>
+                  <img src="assets/images/whatsapp.png" width="16" height="16" alt="whatsapp">
                 </a>
               </li>
             </ul>
